--- a/api/landing-page/models/landing-page.settings.json
+++ b/api/landing-page/models/landing-page.settings.json
@@ -23,12 +23,14 @@
     "sectionHero": {
       "type": "component",
       "repeatable": false,
-      "component": "page.section-hero"
+      "component": "page.section-hero",
+      "required": true
     },
     "sectionAboutProject": {
       "type": "component",
       "repeatable": false,
-      "component": "page.section-about-project"
+      "component": "page.section-about-project",
+      "required": true
     },
     "sectionTech": {
       "type": "component",
@@ -38,7 +40,14 @@
     "sectionConcepts": {
       "type": "component",
       "repeatable": false,
-      "component": "page.section-concepts"
+      "component": "page.section-concepts",
+      "required": true
+    },
+    "sectionModules": {
+      "type": "component",
+      "repeatable": false,
+      "component": "page.section-modules",
+      "required": true
     }
   }
 }
