update: section-hero to header

--- a/api/landing-page/models/landing-page.settings.json
+++ b/api/landing-page/models/landing-page.settings.json
@@ -20,10 +20,10 @@
       "plugin": "upload",
       "required": true
     },
-    "sectionHero": {
+    "header": {
       "type": "component",
       "repeatable": false,
-      "component": "page.section-hero",
+      "component": "page.header",
       "required": true
     },
     "sectionAboutProject": {
