--- a/api/landing-page/models/landing-page.settings.json
+++ b/api/landing-page/models/landing-page.settings.json
@@ -79,6 +79,18 @@
       "repeatable": false,
       "component": "page.section-faq",
       "required": true
+    },
+    "extraQuestion": {
+      "type": "component",
+      "repeatable": false,
+      "component": "page.extra-question",
+      "required": true
+    },
+    "footer": {
+      "type": "component",
+      "repeatable": false,
+      "component": "page.footer",
+      "required": true
     }
   }
 }
