--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "strapi-plugin-graphql": "3.3.3",
     "strapi-plugin-upload": "3.3.3",
     "strapi-plugin-users-permissions": "3.3.3",
+    "strapi-provider-upload-cloudinary": "^3.3.4",
     "strapi-utils": "3.3.3"
   },
   "strapi": {
